Implemented various changes:
- Centralized dependency management in smooks-parent and testres
- Removed some deprecated classes
- Changed use of deprecated methods
- Introduced stronger typing of maps, lists etc.
- Changed tests to use JUnit 4 annotations
- Changed plugin names to be compliant with Maven plugin naming conventions
- Changed plugins to use Maven annotations
- Added support for StringTemplate v4
- Added support for populating javabeans during ASSEMBLY phase (introducing a javabean 1.5 xsd)
- Upgraded libraries (list is not complete as some had changed Maven GAV coordinates)
  - ActiveMQ 5.9.0
  - Ant 1.9.4
  - Camel 2.12.4
  - FreeMarker 2.3.21 (this introduced some code changes)
  - Groovy 2.4.0
  - Javassist 3.11.0
  - JGoodies 2.2.0
  - JiBX 1.2.6
  - JUnit 4.12
  - Hibernate 4.3.8
  - Mockito 1.10.19
  - MVEL 2.2.4
  - OGNL 3.0.9
  - TestNG 6.8.21
  - Snakeyaml 1.14
  - XMLUnit 1.6
  - XStream 1.4.7
  - ...